--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@
 a {
   text-decoration: none;
   color: rgb(99, 196, 44);
-  font-size: 26pt;
+  font-size: 32pt;
   font-weight: bolder;
   font-family: "Times New Roman", Times, serif;
 }
@@ -50,3 +50,8 @@ div {
   margin: 5%;
   background-color: chartreuse;
   padding-left: 10pt;
+}
+
+#centerAlign {
+  align-content: center;
+}
